# examples-python

./: .gitignore  README.md  ruff.toml
examples/crewAI/simple_extraction/: README.md  extract_data_login.py  main.py  pyproject.toml
examples/extract_data/src/: .env.example  Extract data login.md  README.md  extract_data_login.py  pyproject.toml
examples/lead-generation/: .env.example  Pipfile  README.md  airtop_client.py  env_config.py  main.py  prompts.py  state.py  utils.py
examples/lead-generation/nodes/: csv_generator.py  enrich_data.py  info_extractor.py  outreach_message_generator.py  url_list_input.py  url_validator.py
examples/lead-generation/nodes/csv_generator/: csv_generator.py
examples/lead-generation/nodes/enrich_data/: enrich_data.py
examples/lead-generation/nodes/generate_outreach/: outreach_message_generator.py
examples/lead-generation/nodes/info_extractor/: info_extractor.py
examples/lead-generation/nodes/url_list_input/: url_list_input_node.py
examples/lead-generation/nodes/url_validator/: url_validator_node.py
examples/prompt_examples/: README.md  prompt_suggestions.py
examples/prompt_suggestions/: prompts.py
examples/simple-interactions/src/: .env.example  Pipfile  README.md  simple_interaction_recipe.py
examples/summarize/src/: .env.example  README.md  Summarize a webpage.md  pyproject.toml  summarize.py
examples/web_agent/: .env.example  .gitignore  How to schedule worker.md  README.md  connect_database.py  env.example  homolog.db  prompt_templates.py  pyproject.toml  utils.py  worker.py
