[tool.poetry]
name = "extract-data"
version = "0.1.0"
description = "Example that extracts data from a target website"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
airtop = "^0.0.44"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"